comment uneccessary print statements

--- a/notebooks/nightly/sequential_nightly.ipynb
+++ b/notebooks/nightly/sequential_nightly.ipynb
@@ -9420,7 +9420,7 @@
     "    for group in grouped:\n",
     "#         print(group)\n",
     "        (v,data) = group\n",
-    "        print(len(data[topic]))\n",
+    "#         print(len(data[topic]))\n",
     "        if(v != variant):\n",
     "            data['b'+topic] = grouped.get_group(variant)[topic].values\n",
     "            data[['n'+topic]] = data[[topic]].div(grouped.get_group(variant)[topic].values, axis=0)\n",
